# IndiaCP_Corda/india-cp-cordapp/src/main/kotlin/com/barclays/indiacp/cordapp/api/CreditRatingApi.kt
@@ -3,7 +3,7 @@ package com.barclays.indiacp.cordapp.api
 import com.barclays.indiacp.cordapp.contract.CreditRating
 import com.barclays.indiacp.cordapp.contract.LegalEntityDocumentOwnableState
 import com.barclays.indiacp.cordapp.protocol.issuer.CreditRatingFlows
-import com.barclays.indiacp.cordapp.utilities.CPUtils
+import com.barclays.indiacp.cordapp.utilities.ErrorUtils
 import com.barclays.indiacp.cordapp.utilities.ModelUtils
 import com.barclays.indiacp.model.*
 import net.corda.core.node.ServiceHub
@@ -14,11 +14,9 @@ import javax.ws.rs.core.MediaType
 import javax.ws.rs.core.Response
 
 /**
- * Created by ritukedia on 07/01/17.
- */
-/*
- * This is the REST Client API for India CP Trade Operations
- * Created by ritukedia on 07/01/17.
+ * This is the REST Client API for Managing the Credit Rating Information. This could eventually be substituted by an Oracle.
+ *
+ * Created by ritukedia
  */
 @Path("creditrating")
 class CreditRatingApi(val services: ServiceHub){
@@ -38,11 +36,11 @@ class CreditRatingApi(val services: ServiceHub){
             val stx = services.invokeFlowAsync(CreditRatingFlows::class.java, creditRatingDocumentDetails, CreditRating.Commands.Issue::class.java.simpleName).resultFuture.get()
             logger.info("Issued Credit Rating with CR Document\n\nFinal transaction is:\n\n${Emoji.renderIfSupported(stx.tx)}")
 
-            return Response.status(Response.Status.OK).entity(getCreditRating()).build()
+            return Response.status(Response.Status.OK).entity(getCreditRatingModel()).build()
 
         } catch (ex: Throwable) {
             logger.info("Exception when creating credit rating: ${ex.toString()}")
-            return CPUtils.errorHttpResponse(ex, errorCode = CreditRatingError.CREATION_ERROR)
+            return ErrorUtils.errorHttpResponse(ex, errorCode = CreditRatingError.CREATION_ERROR)
         }
     }
 
@@ -57,11 +55,11 @@ class CreditRatingApi(val services: ServiceHub){
             val stx = services.invokeFlowAsync(CreditRatingFlows::class.java, creditRatingDocumentDetails, CreditRating.Commands.Amend::class.java.simpleName).resultFuture.get()
             logger.info("Amended Credit Rating with CR Document\n\nFinal transaction is:\n\n${Emoji.renderIfSupported(stx.tx)}")
 
-            return Response.status(Response.Status.OK).entity(getCreditRating()).build()
+            return Response.status(Response.Status.OK).entity(getCreditRatingModel()).build()
 
         } catch (ex: Throwable) {
             logger.info("Exception when creating credit rating: ${ex.toString()}")
-            return CPUtils.errorHttpResponse(ex, errorCode = CreditRatingError.AMENDMENT_ERROR)
+            return ErrorUtils.errorHttpResponse(ex, errorCode = CreditRatingError.AMENDMENT_ERROR)
         }
 
     }
@@ -79,7 +77,7 @@ class CreditRatingApi(val services: ServiceHub){
 
         } catch (ex: Throwable) {
             logger.info("Exception when creating credit rating: ${ex.toString()}")
-            return CPUtils.errorHttpResponse(ex, errorCode = CreditRatingError.CANCELLATION_ERROR)
+            return ErrorUtils.errorHttpResponse(ex, errorCode = CreditRatingError.CANCELLATION_ERROR)
         }
     }
 
@@ -89,19 +87,26 @@ class CreditRatingApi(val services: ServiceHub){
     fun fetchCreditRating(): Response
     {
         try {
-            return Response.status(Response.Status.OK).entity(getCreditRating() ?: "No Credit Rating Documents Uploaded").build()
+            return Response.status(Response.Status.OK).entity(getCreditRatingModel() ?: "No Credit Rating Documents Uploaded").build()
         } catch (ex: Throwable) {
             logger.info("Exception when fetching credit rating: ${ex.toString()}")
-            return CPUtils.errorHttpResponse(ex, errorCode = CreditRatingError.FETCH_ERROR)
+            return ErrorUtils.errorHttpResponse(ex, errorCode = CreditRatingError.FETCH_ERROR)
         }
     }
 
-    private fun getCreditRating(): LegalEntityCreditRatingDocument? {
+    fun getCreditRatingModel(): LegalEntityCreditRatingDocument? {
+        val creditRatingContractState = getCreditRatingContractState()
+        if (creditRatingContractState != null)
+            return ModelUtils.creditRatingModelFromState(creditRatingContractState)
+        else
+            return null
+    }
+
+    fun getCreditRatingContractState(): CreditRating.State? {
         val states = services.vaultService.currentVault.statesOfType<CreditRating.State>()
         return if (states.isEmpty()) null else {
             val datas = states.map { it.state.data }
-            return if (datas.isEmpty()) null else ModelUtils.creditRatingModelFromState(datas[0])
+            return if (datas.isEmpty()) null else datas[0]
         }
     }
-
 }
